Reverting design to use _PARENT notation